personal photo added

--- a/choices.html
+++ b/choices.html
@@ -24,7 +24,8 @@
              
   <div class="container choicescontainer">
   
-      <div class="navbar navbar-default navbar-fixed-top choicesheader"><div class="avatar"></div>
+      <div class="navbar navbar-default navbar-fixed-top choicesheader">
+          <div class="avatar"><p></p></div>
       </div>
         
         <!--<div class="logo"></div>
