--- a/choices.html
+++ b/choices.html
@@ -24,84 +24,10 @@
       
       <div id="header">
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">ECI</a>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Sobre Nós</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grêmio ECI<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="http://gremioeci.com.br/">Gestão Atual</a></li>
-                                    <li><a href="#">Eleições</a></li>
-                                    <li><a href="#">Chapas Candidatas</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Chapa 1</a></li>
-                                    <li><a href="#">Chapa 2</a></li>
-                                    <li><a href="#">Chapa 3</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Registro de Candidaturas</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grupos Relacionados<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Hacker Group</a></li>
-                                    <li><a href="#">Games Group</a></li>
-                                    <li><a href="#">Web Development Group</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Registro de Grupos</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Materias<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">1º Periodo</a></li>
-                                    <li><a href="#">2º Periodo</a></li>
-                                    <li><a href="#">3º Periodo</a></li>
-                                    <li><a href="#">4º Periodo</a></li>
-                                    <li><a href="#">5º Periodo</a></li>
-                                    <li><a href="#">6º Periodo</a></li>
-                                    <li><a href="#">7º Periodo</a></li>
-                                    <li><a href="#">8º Periodo</a></li>
-                                    <li><a href="#">9º Periodo</a></li>
-                                    <li><a href="#">10º Periodo</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="http://eci.inoa.com.br/">Repositório</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <form class="navbar-form navbar-left" role="search">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Search">
-                                </div>
-                                <button type="submit" class="btn btn-default">Go!</button>
-                            </form>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Conta<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Register</a></li>
-                                    <li><a href="#">Log In</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Administrar Conta</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
+                <div class="avatar">
+                      <img src="http://henrique-102005.sae1.nitrousbox.com/bigu/assets/img/avatar.png" style="vertical-align:middle" />
+                      <p>Username</p>
+                  </div>
             </nav>
         </div>
 
