Chat layout implemented

--- a/choices.html
+++ b/choices.html
@@ -67,7 +67,7 @@
     <div class="footer">
         <div class="container">
 
-            <center><a class="btn check" href="#"><b class="fa fa-check fa-3x"></b></a></center>
+            <center><a href="http://henrique-102005.sae1.nitrousbox.com/bigu/chat.html" class="btn check" href="#"><b class="fa fa-check fa-3x"></b></a></center>
             
       </div>  
     </div>   
